Various mods to make the BasicExample deterministic on save load, and also for serializing vehicles. This commit will need to be refactored, but I'm saving at this point since vehicles and action interfaces in general can be serialized and deserialized now. Moving on to serializing and deserializing wheels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,7 +207,7 @@ OPTION(BUILD_CPU_DEMOS "Build original Bullet CPU examples" ON)
 
 
 
-OPTION(INTERNAL_UPDATE_SERIALIZATION_STRUCTURES "Internal update serialization structures" OFF)
+OPTION(INTERNAL_UPDATE_SERIALIZATION_STRUCTURES "Internal update serialization structures" ON)
 IF (INTERNAL_UPDATE_SERIALIZATION_STRUCTURES)
 ADD_DEFINITIONS( -DBT_INTERNAL_UPDATE_SERIALIZATION_STRUCTURES)
 ENDIF (INTERNAL_UPDATE_SERIALIZATION_STRUCTURES)
