--- a/test/BulletDynamics/CMakeLists.txt
+++ b/test/BulletDynamics/CMakeLists.txt
@@ -23,9 +23,11 @@ IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
 			SET_TARGET_PROPERTIES(Test_btKinematicCharacterController PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
 ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
 
-LINK_LIBRARIES(BulletWorldImporter)
+LINK_LIBRARIES(BulletDynamics BulletCollision LinearMath gtest BulletWorldImporter BulletFileLoader)
 
-ADD_EXECUTABLE(Test_deterministic_save_and_restore test_deterministic_save_and_restore.cpp)
+ADD_EXECUTABLE(Test_deterministic_save_and_restore test_deterministic_save_and_restore.cpp
+		../../Extras/Serialize/BulletWorldImporter/btBulletWorldImporter.cpp
+		../../Extras/Serialize/BulletWorldImporter/btWorldImporter.cpp)
 
 ADD_TEST(Test_DeterministicSaveRestore_PASS Test_deterministic_save_and_restore)
 
