--- a/test/BulletDynamics/CMakeLists.txt
+++ b/test/BulletDynamics/CMakeLists.txt
@@ -22,3 +22,22 @@ IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
 			SET_TARGET_PROPERTIES(Test_btKinematicCharacterController PROPERTIES  MINSIZEREL_POSTFIX "_MinsizeRel")
 			SET_TARGET_PROPERTIES(Test_btKinematicCharacterController PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
 ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
+
+LINK_LIBRARIES(BulletDynamics BulletCollision LinearMath gtest BulletWorldImporter BulletFileLoader)
+
+IF (NOT WIN32)
+	LINK_LIBRARIES(pthread)
+ENDIF()
+
+ADD_EXECUTABLE(Test_deterministic_save_and_restore test_deterministic_save_and_restore.cpp
+		../../Extras/Serialize/BulletWorldImporter/btBulletWorldImporter.cpp
+		../../Extras/Serialize/BulletWorldImporter/btWorldImporter.cpp)
+
+ADD_TEST(Test_DeterministicSaveRestore_PASS Test_deterministic_save_and_restore)
+
+IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
+			SET_TARGET_PROPERTIES(Test_deterministic_save_and_restore PROPERTIES  DEBUG_POSTFIX "_Debug")
+			SET_TARGET_PROPERTIES(Test_deterministic_save_and_restore PROPERTIES  MINSIZEREL_POSTFIX "_MinsizeRel")
+			SET_TARGET_PROPERTIES(Test_deterministic_save_and_restore PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
+ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
+
